2014-01-20  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSSet.m: Added missing ([-valueForKey:]) method.

2014-01-20  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSKeyValueMutableArray.m:
	* Source/NSKeyValueMutableSet.m:
	Don't post KVO notifications if +automaticallyNotifiesObserversForKey: 
	returns NO, this ensures we match Cocoa behavior.

2014-01-18  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSObject.m (-respondsToSelector, 
	+instancesRespondToSelector:): Fixed to check +resolveInstanceMethod:
	and +resolveClassMethod: as documented in Cocoa NSObject API.

2014-01-16  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSScanner.m: Implement -scanInteger: by conditionally
	calling -scanInt: or -scanLongLong: based on the pointer size
	detected at configure time.

2014-01-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueObserving.m:
	Path info lifetime fixups to avoid crashes of the kind reported
	by Mathias Bauer <mathias_bauer@gmx.net>

2014-01-14  Lubos Dolezel <lubos@dolezel.info>
	* Source/NSBundle.m:
	* Headers/Foundation/NSBundle.h: add -resourceURL

2014-01-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m:
	* Documentation/Base.gsdoc:
	Add GNUSTEP_DEVELOPER_DIR to allow definition of the native path
	to the msys/mingw development tools on windows.
	Also improve/fix lookup heuristics.

2014-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Revert last change to get -isAbsolutePath working
	on mingw again ... need to analyse startup problem.

2014-01-13  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/NSString.m: absolute paths on __MINGW__ can also start
	with "/" if GSPathHandlingRight() is YES, otherwise GNUstep config
	paths can't be used during startup.

2014-01-11  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/GSMDNSNetServices.m: minor fixes - does now properly compile
	on Windows, too.
	NOTE: